--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Testing Bro</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	<h1>Hey Bro</h1>
+</body>
+</html>
